# labs402-x402-gate

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/hola_x402/: README.md  cliente.py  servidor.py
labs402_x402_gate/: __init__.py  __main__.py  config.py  handlers.py  server.py  store.py  types.py  x402_client.py
templates/x402-scraper-gate/: .env.example  README.md  cliente_demo.py  diagrama.md  requirements.txt  scraper.py  servidor.py
tests/: conftest.py  test_handlers.py  test_store.py  test_x402_client.py
