[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "labs402-x402-gate"
version = "0.1.0"
description = "El stack hispano para monetizar agentes IA con x402 sobre Solana"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "x402[svm,fastapi,httpx]>=2.9.0",
    "uvicorn[standard]>=0.34.0",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
