[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "labs402-x402-gate"
version = "0.1.0"
description = "El stack hispano para monetizar agentes IA con x402 sobre Solana"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "x402[svm,fastapi,httpx]>=2.9.0",
    "uvicorn[standard]>=0.34.0",
    "python-dotenv>=1.1.0",
    "mcp[cli]>=1.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["examples", "labs402_x402_gate"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=labs402_x402_gate --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py312"
